# superposition-measurement

./: .gitignore  LICENSE  README.md  create_plot_report.py  environment.yml  grokking (2).ipynb  install_requirements.sh  job.job  pyproject.toml  setup.py  setup_conda_env.sh
.github/workflows/: ci.yml
experiments/: plotting.py
experiments/adversarial/: README.md  analysis.py  attacks.py  config.py  datasets.py  datasets_adversarial.py  evaluation.py  main.py  metrics.py  models.py  new_REFACTORED_USAGE.md  new_analyze_results.py  new_evaluate_models.py  new_evaluate_models_memory_optimized.py  new_train_models.py  sae.py  training.py  utils.py
experiments/adversarial robustness/: config.py  datasets.py  datasetsCifar.py  main.py  metrics.py  models.py  sae.py  training.py
experiments/grokking/: grokking_llc_measurement.py  grokking_sae_analysis.py
experiments/interventions/: dataset_multitasksparseparity.py  dictionary_scaling.py  dropout.py  interventions.py
experiments/layerwise/: pythia70m.py  pythia_fixed.py
results_Daniel/Cifar10 Clean FGSM/: Cifar10_Eps_60.txt  Graph.docx
results_Daniel/Cifar10Noisy FGSM/: Cifar10NoisyResults.docx  ~$far10NoisyResults.docx
results_Daniel/Cifar10PGD/: CIFAR10_PGD.txt  Cifar10PGD.docx
results_Daniel/MNIST Clean FGSM/: MNIST CNN FGSM.docx  MNISTSAE10.txt
tests/: conftest.py  test_attacks.py  test_evaluation.py  test_models.py  test_sae.py
