[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superposition-measurement"
version = "0.1.0"
description = "Measuring feature superposition in neural networks via sparse autoencoders and adversarial robustness"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Leonard Bereska"},
]

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "nnsight>=0.2",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.4",
]
llm = [
    "datasets>=2.14",
    "dictionary-learning",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["experiments/adversarial", "experiments"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
